src/src/objects/LMS_Employee__c.object
<CustomObject>
    <fields>
        <fullName>LMS_Aadhar_Number__c</fullName>
        <label>Aadhar Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Accomplishments__c</fullName>
        <label>Accomplishments</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Awards__c</fullName>
        <label>Awards</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_CTC__c</fullName>
        <label>CTC(Cost to Company)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LMS_Date_of_Joining__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMS_Date_of_Releasing__c</fullName>
        <label>Date of Releasing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMS_Date_of_birth__c</fullName>
        <label>Date of birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LMS_Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>App Development</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Designation__c</fullName>
        <label>Designation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Admin</fullName>
                </value>
                <value>
                    <fullName>Developer</fullName>
                </value>
                <value>
                    <fullName>Business Analyst</fullName>
                </value>
                <value>
                    <fullName>Business Consultant</fullName>
                </value>
                <value>
                    <fullName>Business Associate</fullName>
                </value>
                <value>
                    <fullName>Associate Software Engineer</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LMS_Employee_Code__c</fullName>
        <displayFormat>CNIST{0000}</displayFormat>
        <label>Employee Code</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>LMS_Employement_Type__c</fullName>
        <label>Employement Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FTE(Full Time Employee)</fullName>
                </value>
                <value>
                    <fullName>FTH(Fixed Term Hire)</fullName>
                </value>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>C2H(Contract to Hire)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Number_of_Absents__c</fullName>
        <label>Number of Absents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMS_PAN_Number__c</fullName>
        <label>PAN Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_PF_Account_Number__c</fullName>
        <label>PF Account Number</label>
        <length>22</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LMS_Previous_Experience__c</fullName>
        <label>Previous Experience</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMS_Project__c</fullName>
        <label>Project</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>User Story</fullName>
                </value>
                <value>
                    <fullName>LMS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>In-Active</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_UAN_Number__c</fullName>
        <label>UAN Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LMS_Work_Location__c</fullName>
        <label>Work Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Chennai</fullName>
                </value>
                <value>
                    <fullName>Bangalore</fullName>
                </value>
                <value>
                    <fullName>Delhi</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LMS_Work_Type__c</fullName>
        <label>Work Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-Site</fullName>
                </value>
                <value>
                    <fullName>Client</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skill_set__c</fullName>
        <label>Skill set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce</fullName>
                </value>
                <value>
                    <fullName>Devops</fullName>
                </value>
                <value>
                    <fullName>Java</fullName>
                </value>
                <value>
                    <fullName>Javascript</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Aadhar_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(REGEX( LMS_Aadhar_Number__c , &quot;[2-9]{1}[0-9]{11}&quot;))</errorConditionFormula>
        <errorDisplayField>LMS_Aadhar_Number__c</errorDisplayField>
        <errorMessage>Please Enter Valid Aadhar Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PAN_Validation_10_Numbers</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX(  LMS_PAN_Number__c , &quot;[A-Za-z]{5}[0-9]{4}[A-z]{1}&quot;) )</errorConditionFormula>
        <errorDisplayField>LMS_PAN_Number__c</errorDisplayField>
        <errorMessage>Please Enter Valid PAN Number</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PF_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>NOT( REGEX(   LMS_PF_Account_Number__c  , &quot;[A-Za-z]{5}[0-9]{7}[0]{3}[0-9]{7}&quot;) )</errorConditionFormula>
        <errorDisplayField>LMS_PF_Account_Number__c</errorDisplayField>
        <errorMessage>Please Enter Valid PF Account Number</errorMessage>
    </validationRules>
</CustomObject>